# RivalTune

./: .gitignore  Cargo.toml  README.md  cargo-sources.json  com.polydez.rivaltune.json  meson.build  python3-rivalcfg.json
data/: com.polydez.rivaltune.desktop.in  com.polydez.rivaltune.gschema.xml  com.polydez.rivaltune.metainfo.xml.in  com.polydez.rivaltune.service.in  meson.build
data/icons/: meson.build
flatpak/: com.polydez.RivalTune.yml
po/: POTFILES.in  meson.build
releases/rivaltune/: com.polydez.RivalTune.desktop  com.polydez.RivalTune.metainfo.xml  rivaltune
rivaltune/: DEVICE_SELECTION.md  MULTI_DPI_PRESETS.md  README.md  flatpak-flutter.py  pubspec.yaml
rivaltune/android/app/: build.gradle
rivaltune/flutter/: com.polydez.RivalTune.metainfo.xml  com.polydez.RivalTune.yml
rivaltune/ios/Runner/: Info.plist
rivaltune/ios/Runner.xcodeproj/: project.pbxproj
rivaltune/lib/: main.dart
rivaltune/lib/services/: device_detection_service.dart  rivalcfg_service.dart
rivaltune/linux/: CMakeLists.txt  rivaltune.desktop
rivaltune/linux/runner/: CMakeLists.txt  my_application.cc
rivaltune/macos/Runner.xcodeproj/: project.pbxproj
rivaltune/test/: widget_test.dart
rivaltune/tools/: generate_linux_icons.py
rivaltune/web/: index.html  manifest.json
rivaltune/windows/: CMakeLists.txt
rivaltune/windows/runner/: Runner.rc  main.cpp
src/: application.rs  config.rs  device_page.rs  devices.rs  main.rs  meson.build  onboarding.rs  onboarding.ui  rivalcfg.rs  rivaltune.gresource.xml  shortcuts-dialog.ui  state.rs  style.css  window.rs  window.ui
(+25 files in other folders)
