[package]
name = "rivaltune"
version = "1.8.4"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_47"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_6"]
